--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ snippets,vorlagen,lernen,verstehen,
 	<li>[2022-11]: Ausarbeitung</li>
 	<li>[2023-03]: Designentwicklung</li>
 	<li>[2023-08]: Github-Anbindung</li>
-	<li>[2023-10]: Quelltext-Umsetzung</li></ul>
+	<li>[2023-10]: Integration</li></ul>
 
 <!-- WTF is Jumi.biz ? -->
 <h2>WTF is Jumi.biz ?</h2>
