--- a/Content.htm
+++ b/Content.htm
@@ -66,26 +66,49 @@ snippets,vorlagen,lernen,verstehen,
 
 <div class="grid-container">
 <article class="content flow">
-  <h2>Datensicherheit, , , , </h2>
+  <h2>Fachinformatik </h2>
   <ul>
-  <h3>Hardware</h3>
+  <h3>Grundlagen </h3>
+  <li><b><a href="https://jumi.biz/pages/Kritische_Infrastrukturen.htm"> KRITIS BSIG</a></b><span class="kleintxt"> Kritische Infrastrukturen</span></li>
   <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
-  <h3>Betriebssysteme</h3>
+  <h3>Theorie </h3>
+  <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
+  <h3>Praxis </h3>
   <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
   </ul>
 </article>
 <article class="content flow">
-  <h2>Netzwerke</h2>
+  <h2>Sicherheit </h2>
   <ul>
-  <h3>Multimedia</h3>
+  <h3>IT-Grundschutz </h3>
+  <li><b><a href="https://jumi.biz/pages/IT-Grundschutz.htm">IT-Grundschutz </a></b><span class="kleintxt">
+  <li><b><a href="https://jumi.biz/pages/Kritische_Infrastrukturen.htm">Kritische Infrastruktur</a></b><span class="kleintxt">
+  <h3>Hardware </h3>
   <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
-  <h3>Software</h3>
+  <h3>Software </h3>
+  <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
+  <h3>Datensicherheit </h3>
+  <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
+  <h3>Datenschutz </h3>
   <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
   </ul>
 </article>
 <article class="content flow">
-  <h2>Monitoring</h2>
+  <h2>Netzwerke </h2>
   <ul>
+  <h3>Komponenten </h3>
+  <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
+  <h3>Kommunikation </h3>
+  <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
+  <h3>Konzepte </h3>
+  <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
+  </ul>
+</article>
+<article class="content flow">
+  <h2>Programmierung </h2>
+  <ul>
+  <h3>Skripte </h3>
+  <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
   <li><b><a href="https://jumi.biz/pages/###"> Bash</a></b><span class="kleintxt"> Skripte</span></li>
   <li><b><a href="https://jumi.biz/pages/###"> Python</a></b><span class="kleintxt"> Skripte</span></li>
   <li><b><a href="https://jumi.biz/pages/###"> Powershell</a></b><span class="kleintxt"> Skripte</span></li>
@@ -93,35 +116,7 @@ snippets,vorlagen,lernen,verstehen,
   </ul>
 </article>
 <article class="content flow">
-  <h2>LinuxShell</h2>
-  <ul>
-  <h3>IT-Grundschutz</h3>
-  <li><b><a href="https://jumi.biz/pages/IT-Grundschutz.htm"> Elementare Gefährdungen</a></b><span class="kleintxt">
-  <li><b><a href="https://jumi.biz/pages/Kritische_Infrastrukturen.htm"> KRITIS BSIG</a></b><span class="kleintxt">
-  <li><b><a href="https://jumi.biz/pages/Kritische_Infrastrukturen.htm"> KRITIS BSIG</a></b><span class="kleintxt"> Kritische Infrastrukturen</span></li>
-  <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
-  <h3>Datensicherheit</h3>
-  <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
-  <h3>Datenschutz</h3>
-  <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
-  </ul>
-</article>
-<article class="content flow">
-  <h2>Dateisysteme</h2>
-  <ul>
-  <li><b><a href="https://jumi.biz/pages/###"> Begriff</a></b><span class="kleintxt"> 404</span></li>
-  <li><b><a href="https://jumi.biz/pages/###"> Begriff</a></b><span class="kleintxt"> 404</span></li>
-  <li><b><a href="https://jumi.biz/pages/###"> Begriff</a></b><span class="kleintxt"> 404</span></li>
-  <li><b><a href="https://jumi.biz/pages/###"> Begriff</a></b><span class="kleintxt"> 404</span></li>
-  <li><b><a href="https://jumi.biz/pages/###"> Begriff</a></b><span class="kleintxt"> 404</span></li>
-
-  </ul>
-</article>
-</div>
-
-<div class="grid-container">
-<article class="content flow">
-  <h2>Projektmanagement</h2>
+  <h2>Projektmanagement </h2>
   <ul>
   <li><b><a href="https://jumi.biz/pages/Projektmanagement.html"> Alle Themen</a></b><span class="kleintxt"> Zusammenfassung<span class="kleintxt"></span></span></li>
   <li><b><a href="https://jumi.biz/pages/###"> DIN ISO 21500</a></b><span class="kleintxt"> Projektmanagement</span></li>
@@ -138,10 +133,7 @@ snippets,vorlagen,lernen,verstehen,
   <li><b><a href="https://jumi.biz/pages/###"> Gantt-Diagramm</a></b><span class="kleintxt"> Zeitfenster</span></li>
   <li><b><a href="https://jumi.biz/pages/###"> Netzplan</a></b><span class="kleintxt"> Ablauf</span></li>
   <li><b><a href="https://jumi.biz/pages/###"> Kritischer Pfad</a></b><span class="kleintxt"> Pufferzeiten</span></li>
-</article>
-<article class="content flow">
   <h3>Marketing</h3>
-  <ul>
   <li><b><a href="https://jumi.biz/pages/###"> Märkte und Bedarfe</a></b><span class="kleintxt"> nicht vorhanden</span></li>
   <li><b><a href="https://jumi.biz/pages/###"> Kundenberatung</a></b><span class="kleintxt"> nicht vorhanden</span></li>
   <li><b><a href="https://jumi.biz/pages/###"> Rechnungswesen</a></b><span class="kleintxt"> nicht vorhanden</span></li>
@@ -150,12 +142,6 @@ snippets,vorlagen,lernen,verstehen,
   <li><b><a href="https://jumi.biz/pages/###"> Qualitätssicherung</a></b><span class="kleintxt"> Produktanforderungen</span></li>
   <li><b><a href="https://jumi.biz/pages/###"> DIN EN ISO 9000</a></b><span class="kleintxt"> Qualitätsnormen</span></li>
   </ul>
-</article>
-<article class="content flow">
-</article>
-<article class="content flow">
-</article>
-<article class="content flow">
 </article>
 </div>
 
