--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ snippets,vorlagen,lernen,verstehen,
 
 <!-- print("hello world")  -->
 <h2>print("hello world") </h2>
-    <p>Diese Website ist im Aufbau.</p>
+    <p>Diese Website ist im Aufbau</p>
 	<ul class="kleintxt">
 	<li>[2019-06]: Domain gemietet</li>
 	<li>[2020/21]: Konzeptentwicklung</li>
@@ -90,11 +90,11 @@ snippets,vorlagen,lernen,verstehen,
 <h3><a href="https://jumi.biz/Content.htm">
 Inhalte:</a></h3>
 <ul>
+<li>Fachinformatik</li>
 <li>Sicherheit</li>
 <li>Netzwerke</li>
-<li>Dateisysteme</li>
-<li>Zahlensysteme</li>
-<li>LinuxShell</li>
+<li>Programmierung</li>
+<li>Projektmanagement</li>
 <li></li>
 </ul>
 </div>
