--- a/Content.htm
+++ b/Content.htm
@@ -69,12 +69,10 @@ snippets,vorlagen,lernen,verstehen,
   <h2>Fachinformatik </h2>
   <ul>
   <h3>Grundlagen </h3>
-  <li><b><a href="https://jumi.biz/pages/Kritische_Infrastrukturen.htm"> KRITIS BSIG</a></b><span class="kleintxt"> Kritische Infrastrukturen</span></li>
-  <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
-  <h3>Theorie </h3>
-  <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
+  <li><b><a href="https://jumi.biz/pages/###"> Zahlensysteme</a></b><span class="kleintxt"> nicht vorhanden</span></li>
+  <li><b><a href="https://jumi.biz/pages/###"> Bits und Bytes</a></b><span class="kleintxt"> nicht vorhanden</span></li>
   <h3>Praxis </h3>
-  <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
+  <li><b><a href="https://jumi.biz/pages/###"> LinuxShell</a></b><span class="kleintxt"> nicht vorhanden</span></li>
   </ul>
 </article>
 <article class="content flow">
@@ -108,7 +106,6 @@ snippets,vorlagen,lernen,verstehen,
   <h2>Programmierung </h2>
   <ul>
   <h3>Skripte </h3>
-  <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
   <li><b><a href="https://jumi.biz/pages/###"> Bash</a></b><span class="kleintxt"> Skripte</span></li>
   <li><b><a href="https://jumi.biz/pages/###"> Python</a></b><span class="kleintxt"> Skripte</span></li>
   <li><b><a href="https://jumi.biz/pages/###"> Powershell</a></b><span class="kleintxt"> Skripte</span></li>
@@ -133,7 +130,7 @@ snippets,vorlagen,lernen,verstehen,
   <li><b><a href="https://jumi.biz/pages/###"> Gantt-Diagramm</a></b><span class="kleintxt"> Zeitfenster</span></li>
   <li><b><a href="https://jumi.biz/pages/###"> Netzplan</a></b><span class="kleintxt"> Ablauf</span></li>
   <li><b><a href="https://jumi.biz/pages/###"> Kritischer Pfad</a></b><span class="kleintxt"> Pufferzeiten</span></li>
-  <h3>Marketing</h3>
+  <h3>Marketing </h3>
   <li><b><a href="https://jumi.biz/pages/###"> Märkte und Bedarfe</a></b><span class="kleintxt"> nicht vorhanden</span></li>
   <li><b><a href="https://jumi.biz/pages/###"> Kundenberatung</a></b><span class="kleintxt"> nicht vorhanden</span></li>
   <li><b><a href="https://jumi.biz/pages/###"> Rechnungswesen</a></b><span class="kleintxt"> nicht vorhanden</span></li>
