--- a/Content.htm
+++ b/Content.htm
@@ -79,8 +79,8 @@ snippets,vorlagen,lernen,verstehen,
   <h2>Sicherheit </h2>
   <ul>
   <h3>IT-Grundschutz </h3>
-  <li><b><a href="https://jumi.biz/pages/IT-Grundschutz.htm">IT-Grundschutz </a></b><span class="kleintxt">
-  <li><b><a href="https://jumi.biz/pages/Kritische_Infrastrukturen.htm">Kritische Infrastruktur</a></b><span class="kleintxt">
+  <li><b><a href="https://jumi.biz/pages/IT-Grundschutz.htm">IT-Grundschutz </a></b><span class="kleintxt"></li>
+  <li><b><a href="https://jumi.biz/pages/Kritische_Infrastrukturen.htm">Kritische Infrastruktur</a></b><span class="kleintxt"></li>
   <h3>Hardware </h3>
   <li><b><a href="https://jumi.biz/pages/###"> Thema</a></b><span class="kleintxt"> nicht vorhanden</span></li>
   <h3>Software </h3>
@@ -114,23 +114,32 @@ snippets,vorlagen,lernen,verstehen,
 </article>
 <article class="content flow">
   <h2>Projektmanagement </h2>
+  <div class="inside-content">
+  <div class="in-inside">
   <ul>
-  <li><b><a href="https://jumi.biz/pages/Projektmanagement.html"> Alle Themen</a></b><span class="kleintxt"> Zusammenfassung<span class="kleintxt"></span></span></li>
+  <li><b><a href="https://jumi.biz/pages/Projektmanagement.html"> Alle Themen</a></b><span class="kleintxt"> Zusammenfassung</span></li>
+  <h3>Initierung </h3>
   <li><b><a href="https://jumi.biz/pages/###"> DIN ISO 21500</a></b><span class="kleintxt"> Projektmanagement</span></li>
   <li><b><a href="https://jumi.biz/pages/###"> DIN ISO 69901</a></b><span class="kleintxt"> Projektmanagement-Systeme</span></li>
   <li><b><a href="https://jumi.biz/pages/###"> PRINCE 2</a></b><span class="kleintxt"> (Projects in Controlled Enviroments)</span></li>
+  <h3>Planung </h3>
   <li><b><a href="https://jumi.biz/pages/###"> Magisches Dreieck</a></b><span class="kleintxt"> Wichtige Kenngrößen</span></li>
   <li><b><a href="https://jumi.biz/pages/###"> SMART</a></b><span class="kleintxt"> Zieleigenschaften</span></li>
   <li><b><a href="https://jumi.biz/pages/###"> Stakeholder</a></b><span class="kleintxt"> Personengruppe</span></li>
+  <h3>Steuerung und Kontrolle </h3>
   <li><b><a href="https://jumi.biz/pages/###"> 4-Phasen-Modell</a></b><span class="kleintxt"> Projektphasen</span></li>
   <li><b><a href="https://jumi.biz/pages/###"> Stakeholder-Analyse</a></b><span class="kleintxt"> Zustimmung</span></li>
   <li><b><a href="https://jumi.biz/pages/###"> Machbarkeits-Studie</a></b><span class="kleintxt"> Vorraussetzungen</span></li>
+  <h3>Abschluss </h3>
   <li><b><a href="https://jumi.biz/pages/###"> Risikoanalyse</a></b><span class="kleintxt"> Flexibilität</span></li>
   <li><b><a href="https://jumi.biz/pages/###"> Wirtschaftlichkeit</a></b><span class="kleintxt"> nicht vorhanden</span></li>
   <li><b><a href="https://jumi.biz/pages/###"> Gantt-Diagramm</a></b><span class="kleintxt"> Zeitfenster</span></li>
   <li><b><a href="https://jumi.biz/pages/###"> Netzplan</a></b><span class="kleintxt"> Ablauf</span></li>
   <li><b><a href="https://jumi.biz/pages/###"> Kritischer Pfad</a></b><span class="kleintxt"> Pufferzeiten</span></li>
+  </div>
+  <div class="in-inside">
   <h3>Marketing </h3>
+  <ul>
   <li><b><a href="https://jumi.biz/pages/###"> Märkte und Bedarfe</a></b><span class="kleintxt"> nicht vorhanden</span></li>
   <li><b><a href="https://jumi.biz/pages/###"> Kundenberatung</a></b><span class="kleintxt"> nicht vorhanden</span></li>
   <li><b><a href="https://jumi.biz/pages/###"> Rechnungswesen</a></b><span class="kleintxt"> nicht vorhanden</span></li>
@@ -139,8 +148,9 @@ snippets,vorlagen,lernen,verstehen,
   <li><b><a href="https://jumi.biz/pages/###"> Qualitätssicherung</a></b><span class="kleintxt"> Produktanforderungen</span></li>
   <li><b><a href="https://jumi.biz/pages/###"> DIN EN ISO 9000</a></b><span class="kleintxt"> Qualitätsnormen</span></li>
   </ul>
-</article>
+  </div>
 </div>
+</article>
 
 </main>
 
