--- a/Content.htm
+++ b/Content.htm
@@ -73,6 +73,12 @@ snippets,vorlagen,lernen,verstehen,
   <li><b><a href="https://jumi.biz/pages/###"> Bits und Bytes</a></b><span class="kleintxt"> nicht vorhanden</span></li>
   <h3>Praxis </h3>
   <li><b><a href="https://jumi.biz/pages/###"> LinuxShell</a></b><span class="kleintxt"> nicht vorhanden</span></li>
+  <li><b><a href="https://jumi.biz/pages/###"> LinuxShell</a></b><span class="kleintxt"> nicht vorhanden</span></li>
+  <li><b><a href="https://jumi.biz/pages/###"> LinuxShell</a></b><span class="kleintxt"> nicht vorhanden</span></li>
+  <li><b><a href="https://jumi.biz/pages/###"> LinuxShell</a></b><span class="kleintxt"> nicht vorhanden</span></li>
+  <li><b><a href="https://jumi.biz/pages/###"> LinuxShell</a></b><span class="kleintxt"> nicht vorhanden</span></li>
+  <li><b><a href="https://jumi.biz/pages/###"> LinuxShell</a></b><span class="kleintxt"> nicht vorhanden</span></li>
+  <li><b><a href="https://jumi.biz/pages/###"> LinuxShell</a></b><span class="kleintxt"> nicht vorhanden</span></li>
   </ul>
 </article>
 <article class="content flow">
