--- a/404.html
+++ b/404.html
@@ -186,16 +186,17 @@ h2, h3, h4 {
 }
 .content b {color: #00f0f0;}
 .content {
-    margin: 30px auto 40px auto;
-    width: 800px;
+    width: min(97%, 70rem);
+    margin-inline: auto;
     text-align: center;
     text-shadow: 1.5px 2px black;
     align-items: center;
     justify-content: space-around;
 }
 .search-container {
-    width: 800px;
+    width: min(97%, 70rem);
     text-align: center;
+    justify-content: space-around;
 }
 
 </style>
