--- a/404.html
+++ b/404.html
@@ -215,7 +215,7 @@ h2, h3, h4 {
 <div class="content">
 <h1>404 Page Not Found</h1>
 <h2><b>¯\_(ツ)_/¯</b></h2>
-<p>Diese Seite ist nicht verfügbar...<br>
+<p>Die Seite ist nicht verfügbar...<br>
 ...oder in einem anderen Verzeichnis.</p>
 <div class="search-container">
     <form accept-charset="UTF-8" id="search" action="/search" method="get">
