--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ snippets,vorlagen,lernen,verstehen,
 <div class="inside-content">
 <div class="in-inside">
 <h3><a href="https://jumi.biz/Content.htm">
-Inhalte:</a></h3>
+Themen:</a></h3>
 <ul>
 <li>Fachinformatik</li>
 <li>Sicherheit</li>
@@ -197,7 +197,7 @@ alt="Picture shows computer">
 https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js
 <script src="assets/js/jspdf.umd.min.js"> -->
 
-<!-- HTML-Analyzer Debugging --
+<!-- HTML-Analyzer Debugging ->
 <h1>HTML-Analyzer</h1>
 <div class="flex">
 <h3>Tags:</h3>
@@ -208,7 +208,7 @@ https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js
 <ul id="idList"></ul>
 </div>
 <script src="assets/js/html-analyzer.js"></script>
-<!-- HTML-Analyzer Debugging -->
+<!- HTML-Analyzer Debugging -->
 
 </body>
 </html>
